- Select the insertion marker when opening the insert complex LaTeX dialog.
- Cleaned up the options dialog.
- Replaced place holder __REPLACEME__ with __REPLACE_ME__, which IMHO is easier
  to the eye.
- Added alignment of inserted pictures to the text baseline (Bug #36).
- Added improvements of LaTeXIt! button:
  - Button is disabled for plain text composer windows (Bug #48).
  - Middle click calls 'undo' (Bug #2).
  - Shift+middle click calls 'undo_all'.
- Added context menu to composer window (Bug #49).
- Added LaTeXIt! to the Add-ons menu to access the preferences (Bug #42).
- Removed the configuration item from toolbar and context menues, because they
  are not needed anymore.
- Delete all cached images when the composer window is closed (Bug #44).
- Added autoscaling of images to font size (can be switched off in the
  preferences, where a size can be manually set).
- When inserting a complex LaTeX, the size can either be automatically
  calculated from the surrounding text or set manually.
- Use 'font size' (in px) instead of 'resolution'.
- Check before sending, if a LatexIt! report exists in the message.

--v0.7

- Use latex/dvipng instead of latex/dvips/convert to generate the image file.

--v0.6.7

- Fixed the mime type of the embedded image to image/png

--v0.6.6

- Adding suggestions from trying to sign add-on through Mozilla
- Update URL points to github
- remove manifest.json from xpi, that shouldn't have been there

-- v0.6.5

- Support for TB60+

-- v0.6 development series --

- Add PATH hacks for Thunderbird on OSX
- Add suggestions explaining why the process might fail.
- Better error reporting.
- Don't choke on malformed paths.
- Add a "load default template" button for the "insert complex latex dialog"
- Add a "show debug information" option for people who are having trouble
getting things to work properly
- Make the paths in the options editable for mac users who cannot navigate to
the place where the binaries are located